-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
5.5.0, 5.6.0 Alpha
-
None
-
Windows
The issue is analogous to https://bugreports.qt.io/browse/QTBUG-47569 . I have this .pro file:
QT += widgets 3dcore QMAKE_CXXFLAGS += -fkeep-inline-functions -std=c++0x TARGET = Qt3DCore-inlines TEMPLATE = lib SOURCES += Qt3DCore-inlines.cpp LIBS += -loleaut32 -lole32
with this cpp:
#include <Qt3DCore>
and I get this error:
release/Qt3DCore-inlines.o:Qt3DCore-inlines.cpp:(.text$_ZN4Qt3D13QAspectThread2trEPKcS2_i[__ZN4Qt3D13QAspectThread2trEPKcS2_i]+0xf): undefined reference to `Qt3D::QAspectThread::staticMetaObject' release/Qt3DCore-inlines.o:Qt3DCore-inlines.cpp:(.text$_ZN4Qt3D13QAspectThread6trUtf8EPKcS2_i[__ZN4Qt3D13QAspectThread6trUtf8EPKcS2_i]+0xf): undefined reference to `Qt3D::QAspectThread::staticMetaObject' C:/Qt/Qt5.5.0/Tools/mingw492_32/bin/../lib/gcc/i686-w64-mingw32/4.9.2/../../../../i686-w64-mingw32/bin/ld.exe: release/Qt3DCore-inlines.o: bad reloc address 0xf in section `.text$_ZN4Qt3D13QAspectThread6trUtf8EPKcS2_i[__ZN4Qt3D13QAspectThread6trUtf8EPKcS2_i]'
QAspectThread is not exported but it's declared in qaspectthread.h which is, judging by the name, a public header.
For Gerrit Dashboard: QTBUG-48385 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
127255,3 | Make QAspectThread private | 5.6 | qt/qt3d | Status: MERGED | +2 | 0 |
127256,2 | Make QAspectThread private | 5.5.1 | qt/qt3d | Status: MERGED | +2 | 0 |
168366,1 | Make QAspectThread private | tqtc/vxworks-5.5 | qt/tqtc-qt3d | Status: ABANDONED | 0 | 0 |