Make QAspectThread private

Change-Id: I1ca23ed346544e50a51ea6d2430b1e6f36a789a7
Task-number: QTBUG-48385
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>