src/core/aspects/aspects.pri
@@ -10,9 +10,9 @@ HEADERS += \
         $$PWD/qabstractaspect.h \
         $$PWD/qaspectengine.h \
         $$PWD/qaspectfactory.h \
-        $$PWD/qaspectthread.h \
         $$PWD/qabstractaspect_p.h \
         $$PWD/qaspectengine_p.h \
-        $$PWD/qaspectmanager_p.h
+        $$PWD/qaspectmanager_p.h \
+        $$PWD/qaspectthread_p.h
 
 INCLUDEPATH += $$PWD
